[Update] Pom for debugging and building locations

--- a/couchbase-connector/pom.xml
+++ b/couchbase-connector/pom.xml
@@ -64,7 +64,7 @@
                 <version>2.10</version>
                 <executions>
                     <execution>
-                        <id>copy</id>
+                        <id>copy-to-project</id>
                         <phase>package</phase>
                         <goals>
                             <goal>copy</goal>
@@ -78,7 +78,27 @@
                                     <type>${project.packaging}</type>
                                 </artifactItem>
                             </artifactItems>
-                            <outputDirectory>${final.build.location}/lib</outputDirectory>
+                            <outputDirectory>${project.basedir}/../pre-cu/target/classes/lib</outputDirectory>
+                            <overWriteReleases>true</overWriteReleases>
+                            <overWriteSnapshots>true</overWriteSnapshots>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>copy-to-build</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>${project.groupId}</groupId>
+                                    <artifactId>${project.artifactId}</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>${project.packaging}</type>
+                                </artifactItem>
+                            </artifactItems>
+                            <outputDirectory>${project.basedir}/../build/lib</outputDirectory>
                             <overWriteReleases>true</overWriteReleases>
                             <overWriteSnapshots>true</overWriteSnapshots>
                         </configuration>
