--- a/scripts/pom.xml
+++ b/scripts/pom.xml
@@ -25,5 +25,16 @@
         <developerConnection>scm:git:git@github.com:bacta/iff.git</developerConnection>
     </scm>
 
+    <plugins>
+	<plugin>
+	    <groupId>com.theoryinpractise</groupId>
+	    <artifactId>clojure-maven-plugin</artifactId>
+	    <version>1.8.1</version>
+	    <extensions>true</extensions>
+	    <configuration>
+	    </configuration>
+	</plugin>
+    </plugins>
+
 
 </project>
