--- a/scripts/pom.xml
+++ b/scripts/pom.xml
@@ -25,5 +25,42 @@
         <developerConnection>scm:git:git@github.com:bacta/iff.git</developerConnection>
     </scm>
 
+    <properties>
+        <final.build.location>${project.parent.basedir}/build</final.build.location>
+    </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
+                <executions>
+                    <execution>
+                        <id>copy-scripts</id>
+                        <!-- here the phase you need -->
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${final.build.location}/scripts</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${project.basedir}/src/main/clojure/</directory>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.ocdsoft.bacta</groupId>
+            <artifactId>pre-cu</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
