--- a/scripts/pom.xml
+++ b/scripts/pom.xml
@@ -37,6 +37,7 @@
 		<version>1.8.1</version>
 		<extensions>true</extensions>
 		<configuration>
+		    <compileDeclaredNamespaceOnly>true</compileDeclaredNamespaceOnly>
 		</configuration>
 	    </plugin>
             <plugin>
