--- a/scripts/pom.xml
+++ b/scripts/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>scripts</artifactId>
-    <packaging>jar</packaging>
+    <packaging>clojure</packaging>
 
     <parent>
         <groupId>com.ocdsoft.bacta</groupId>
@@ -30,6 +30,7 @@
     </properties>
 
     <build>
+        <sourceDirectory>src/main/clojure/</sourceDirectory>
         <plugins>
 	    <plugin>
 		<groupId>com.theoryinpractise</groupId>
@@ -69,6 +70,22 @@
         <dependency>
             <groupId>com.ocdsoft.bacta</groupId>
             <artifactId>pre-cu</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.clojure</groupId>
+            <artifactId>clojure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>reply</groupId>
+            <artifactId>reply</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.clojure</groupId>
+            <artifactId>tools.nrepl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cider</groupId>
+            <artifactId>cider-nrepl</artifactId>
         </dependency>
     </dependencies>
 
