--- a/pom.xml
+++ b/pom.xml
@@ -482,6 +482,11 @@
                 <artifactId>cider-nrepl</artifactId>
                 <version>0.13.0-SNAPSHOT</version>
             </dependency>
+	    <dependency>
+		<groupId>org.clojure</groupId>
+		<artifactId>tools.namespace</artifactId>
+		<version>0.3.0-alpha3</version>
+	    </dependency>
         </dependencies>
     </dependencyManagement>
 
