--- a/pre-cu/build.gradle
+++ b/pre-cu/build.gradle
@@ -1,4 +1,3 @@
-
 plugins {
   id 'org.ajoberstar.grgit' version '1.5.0'
 }
@@ -10,23 +9,36 @@ dependencies {
   compile project(':engine')
   compile project(':soe')
   compile project(':iff')
-    compile group: 'steerio', name: 'steerio', version:'1.0.0'
-    compile group: 'org.igniterealtime.smack', name: 'smack-core', version:'4.0.1'
+  compile group: 'steerio', name: 'steerio', version: '1.0.0'
+  compile group: 'org.igniterealtime.smack', name: 'smack-core', version: '4.0.1'
   compile project(':tre')
-    compile group: 'org.igniterealtime.smack', name: 'smack-tcp', version:'4.0.1'
-    compile group: 'org.apache.velocity', name: 'velocity', version:'1.7'
-    compile group: 'commons-codec', name: 'commons-codec', version:'1.10'
-    compile group: 'co.paralleluniverse', name: 'quasar-core', version:'0.7.5', classifier:'jdk8'
+  compile group: 'org.igniterealtime.smack', name: 'smack-tcp', version: '4.0.1'
+  compile group: 'org.apache.velocity', name: 'velocity', version: '1.7'
+  compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
+  compile group: 'co.paralleluniverse', name: 'quasar-core', version: '0.7.5', classifier: 'jdk8'
 
   String dbType = allprojects.getProperties().get("database")
-  if (dbType == null || dbType.equalsIgnoreCase("couchbase")) {
-    runtime fileTree(dir: '../couchbase-connector/build/libs')
-    runtime fileTree(dir: '../couchbase-connector/build/depends')
+  if (dbType == null) {
+    dbType = "couchbase"
   }
+
+  runtime fileTree(dir: '../' + dbType + '-connector/build/libs')
+  runtime fileTree(dir: '../' + dbType + '-connector/build/depends')
 }
 
-task runLogin(type: JavaExec) {
+task buildDatabaseDepends(type: GradleBuild) {
+  String dbType = allprojects.getProperties().get("database")
+  if (dbType == null) {
+    dbType = "couchbase"
+  }
+
+  buildFile = '../' + dbType + '-connector/build.gradle'
+  tasks = ['build']
+}
+
+task runLogin(type: JavaExec, dependsOn: [build]) {
   group = RUN_GROUP
+
   classpath = sourceSets.main.runtimeClasspath
 
   main = 'com.ocdsoft.bacta.swg.server.PreCuServer'
@@ -35,7 +47,7 @@ task runLogin(type: JavaExec) {
   args 'login'
 }
 
-task runChat(type: JavaExec) {
+task runChat(type: JavaExec, dependsOn: [build]) {
   group = RUN_GROUP
   classpath = sourceSets.main.runtimeClasspath
 
@@ -45,9 +57,9 @@ task runChat(type: JavaExec) {
   args 'chat'
 }
 
-task runGame(type: JavaExec) {
-    group = RUN_GROUP
-    classpath = sourceSets.main.runtimeClasspath
+task runGame(type: JavaExec, dependsOn: [build]) {
+  group = RUN_GROUP
+  classpath = sourceSets.main.runtimeClasspath
 
   main = 'com.ocdsoft.bacta.swg.server.PreCuServer'
 
@@ -55,14 +67,14 @@ task runGame(type: JavaExec) {
   args 'game'
 }
 
-task runSWG(type: JavaExec) {
+task runSWG(type: JavaExec, dependsOn: [build]) {
   group = RUN_GROUP
   classpath = sourceSets.main.runtimeClasspath
 
   main = 'com.ocdsoft.bacta.swg.server.PreCuServer'
 
   // arguments to pass to the application
-  args 'login','chat','game'
+  args 'login', 'chat', 'game'
 }
 
 clean << {
@@ -70,7 +82,7 @@ clean << {
 }
 
 // add an action to the build task that creates a startup shell script
-build  << {
+build << {
   file('../dist').mkdir()
   file('../dist/libs').mkdir()
   file('../dist/scripts').mkdir()
@@ -91,22 +103,22 @@ build  << {
   ant.chmod(file: bashScript.absolutePath, perm: 'u+x')
 }
 
-task copyArtifactsToDist(type: Copy ,dependsOn:[build]) {
+task copyArtifactsToDist(type: Copy, dependsOn: [build]) {
   from "build/libs"
   into "../dist/libs"
 }
 
-task copyLibToDist(type: Copy ,dependsOn:[build]) {
+task copyLibToDist(type: Copy, dependsOn: [build]) {
   into "../dist/libs"
   from configurations.runtime
 }
 
-task copyConfToDist(type: Copy ,dependsOn:[build]) {
+task copyConfToDist(type: Copy, dependsOn: [build]) {
   into "../dist/conf"
   from "../conf"
 }
 
-task writeGitProperties(dependsOn:[processResources]) {
+task writeGitProperties(dependsOn: [processResources]) {
   File file = file('./build/resources/main/git-soe.properties')
   if (file.exists())
     file.delete()
@@ -126,5 +138,5 @@ task writeGitProperties(dependsOn:[processResources]) {
 
 task copyFiles(dependsOn: [copyArtifactsToDist, copyLibToDist, copyConfToDist])
 
-build.finalizedBy copyFiles
+build.finalizedBy copyFiles, buildDatabaseDepends
 processResources.finalizedBy writeGitProperties
